--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@mediapipe/tasks-vision": "^0.10.12",
     "lucide-react": "^0.360.0",
     "next": "14.1.4",
+    "pizzicato": "^0.6.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tone": "^14.7.77"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pizzicato": "^0.6.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
